apps/infrastructure/cloudflare-tunnel/templates/ciliumNetPol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
  namespace: cloudflare-tunnel
spec:
  endpointSelector:
    matchLabels:
      application: cloudflared
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.namespace.labels.name: traefik
      toPorts:
        - ports:
            - port: "8443"
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: conradcf.cloudflareaccess.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: pqtunnels.cloudflareresearch.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: region1.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
    - toFQDNs:
        - matchName: region2.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
    - toEndpoints:
        - {}
