apps/infrastructure/cloudflare-tunnel/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflare-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudflare-tunnel
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: 8443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: plex
      ports:
        - port: 32400
    - to:
        - ipBlock:
            cidr: 192.168.30.20/32
      ports:
        - port: 5001
        - port: 2096
        - port: 2087
    - to:
        - ipBlock:
            cidr: 198.41.192.0/24
    - to:
        - ipBlock:
            cidr: 198.41.200.0/24
      to:
        - ipBlock:
            cidr: 104.18.4.0/24
